# web2pdf

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README_RU.md
.github/workflows/: release.yml
.tasks/: features.md  todo.md
js/: flatten-shadow-dom.js  iconify-icon.js  lang-set.js  mdbook-sanitation.js  page-cleanup.js  page-wait.js  prepare-habr.js  sanitation-code-style.js  title-extract.js
src/: _adapters.rs  _pdf_utils.rs  adapters.rs  browser_utils.rs  main.rs  pdf_utils.rs  toc.rs
src/_adapter_registry/: registry.rs  traits.rs
src/_adapters/: default.rs
src/_adapters/_mdbook/: adapter.rs  detector.rs
src/_pdf_utils/: fix_tagged_pdf.rs  flatten_nonstruct.rs  helpers.rs  merge_pdfs.rs  sanitize_pdf.rs
src/adapters/: mdbook.rs  registry.rs  traits.rs
src/adapters/mdbook/: adapter.rs  detector.rs
