[package]
name = "web2pdf"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chromiumoxide = "0.8.0"
futures = "0.3.31"
scraper = "0.24.0"
tokio = { version = "1.47.1", features = ["full"] }
which = "8.0.0"
reqwest = { version = "0.12", features = [
  "json",
  "gzip",
  "brotli",
  "deflate",
  "blocking",
  "cookies",
  "rustls-tls",
] }
quick-xml = "0.38"
tempfile = "3.23.0"
lopdf = "0.38"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
