[package]
name = "web2pdf"
version = "0.1.1"
repository = "https://github.com/sumbad/web2pdf"
edition = "2024"

[[bin]]
name = "web2pdf"
path = "src/main.rs"

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
anyhow = "1.0.100"
chromiumoxide = "0.8.0"
futures = "0.3.31"
scraper = "0.25.0"
tokio = { version = "1.48.0", features = ["full"] }
which = "8.0.0"
reqwest = { version = "0.12", features = [
  "json",
  "gzip",
  "brotli",
  "deflate",
  "blocking",
  "cookies",
  "rustls-tls",
] }
quick-xml = "0.38"
tempfile = "3.23.0"
lopdf = "0.38"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
